--- a/sample_report.ipynb
+++ b/sample_report.ipynb
@@ -2,26 +2,42 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d8f5f2a2",
+   "id": "11d650f1",
    "metadata": {},
    "source": [
     "# Homework #1\n",
     "\n",
     "**Name:** John Doe  \n",
-    "**Course:** MEC 5XX \n",
+    "**ID:** 88888888     \n",
+    "**Course:** MEC 5XX  \n",
     "\n",
-    "---\n",
-    "\n",
-    "## 1. Section 1\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8f5f2a2",
+   "metadata": {},
+   "source": [
+    "## Auxiliary Functions\n",
+    "Place all auxiliary functions (if any) here. Keep them minimal and well-documented."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b48d53b",
+   "metadata": {},
+   "source": [
+    "## 1. Title of Section\n",
     "This report shows how to combine text, mathematics, code, and figures in a Jupyter Notebook. As an example, we will analyze a quadratic function:\n",
     "\n",
     "\n",
-    "$$ f(x) = ax^2 + bx + c $$\n"
+    "$$ f(x) = ax^2 + bx + c $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0601fe0c",
    "metadata": {},
    "outputs": [],
@@ -52,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cde8e473",
    "metadata": {},
    "outputs": [
@@ -87,13 +103,25 @@
    "id": "85b7464a",
    "metadata": {},
    "source": [
-    "## 2. Section 2\n",
-    "Importing a figure:\n",
+    "## 2. Title of Section\n",
     "\n",
-    "![alt text](Figures/Math.jpg)\n",
+    "Include final outputs, tables, and figures.\n",
     "\n",
+    "- Embed plots directly with matplotlib, or\n",
+    "- Load figures from the `figures/` folder if they are large.\n",
+    "\n",
+    "An example of importing a figure:\n",
+    "\n",
+    "![alt text](figures/Math.jpg)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da200cbb",
+   "metadata": {},
+   "source": [
     "## 3. Discussion\n",
-    "Thus, the roots of the function are $x=1$ and $x=2$, which match the points where the curve intersects the x-axis.  \n"
+    "Thus, the roots of the function are $x=1$ and $x=2$, which match the points where the curve intersects the x-axis.  "
    ]
   }
  ],
