--- a/sample_report.ipynb
+++ b/sample_report.ipynb
@@ -19,8 +19,33 @@
    "id": "d8f5f2a2",
    "metadata": {},
    "source": [
-    "## Auxiliary Functions\n",
-    "Place all auxiliary functions (if any) here. Keep them minimal and well-documented."
+    "## Helper Functions\n",
+    "Place all helper (or auxiliary) functions (if any) here. Keep them minimal and well-documented."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "53aa7cd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def euclidean_distance(p1, p2):\n",
+    "    \"\"\"\n",
+    "    Compute the Euclidean distance between two 2D points.\n",
+    "    p1, p2: tuples (x, y)\n",
+    "    \"\"\"\n",
+    "    return math.sqrt((p1[0] - p2[0])**2 + (p1[1] - p2[1])**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "451f3a47",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -37,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0601fe0c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cde8e473",
    "metadata": {},
    "outputs": [
@@ -96,6 +121,35 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a07e6c4a",
+   "metadata": {},
+   "source": [
+    "Using the helper function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "76850f49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distance from start to goal: 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = (0, 0)\n",
+    "goal = (3, 4)\n",
+    "\n",
+    "print(\"Distance from start to goal:\", euclidean_distance(start, goal))"
    ]
   },
   {
